--- a/src/output.css
+++ b/src/output.css
@@ -8,7 +8,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-pink-200: oklch(89.9% 0.061 343.231);
+    --color-pink-100: oklch(94.8% 0.028 342.258);
+    --color-pink-300: oklch(82.3% 0.12 346.018);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -34,8 +35,8 @@
     --font-weight-semibold: 600;
     --font-weight-extrabold: 800;
     --leading-tight: 1.25;
+    --leading-relaxed: 1.625;
     --drop-shadow-xl: 0 9px 7px rgb(0 0 0 / 0.1);
-    --drop-shadow-2xl: 0 25px 25px rgb(0 0 0 / 0.15);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -208,6 +209,9 @@
   .relative {
     position: relative;
   }
+  .-top-\[120px\] {
+    top: calc(120px * -1);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
@@ -217,11 +221,23 @@
   .top-10 {
     top: calc(var(--spacing) * 10);
   }
+  .top-\[30px\] {
+    top: 30px;
+  }
+  .top-\[480px\] {
+    top: 480px;
+  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
+  .-bottom-\[30px\] {
+    bottom: calc(30px * -1);
+  }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
+  }
+  .bottom-\[30px\] {
+    bottom: 30px;
   }
   .bottom-\[60px\] {
     bottom: 60px;
@@ -277,11 +293,23 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
   }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
+  }
+  .mb-11 {
+    margin-bottom: calc(var(--spacing) * 11);
+  }
   .mb-12 {
     margin-bottom: calc(var(--spacing) * 12);
+  }
+  .ml-20 {
+    margin-left: calc(var(--spacing) * 20);
   }
   .flex {
     display: flex;
@@ -292,11 +320,20 @@
   .inline {
     display: inline;
   }
+  .table {
+    display: table;
+  }
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
+  .h-\[55\] {
+    height: 55;
+  }
   .h-\[60px\] {
     height: 60px;
+  }
+  .h-\[110px\] {
+    height: 110px;
   }
   .h-\[200px\] {
     height: 200px;
@@ -304,14 +341,32 @@
   .h-\[206px\] {
     height: 206px;
   }
+  .h-\[400px\] {
+    height: 400px;
+  }
   .h-\[418px\] {
     height: 418px;
+  }
+  .h-\[440px\] {
+    height: 440px;
+  }
+  .h-\[470px\] {
+    height: 470px;
   }
   .h-\[478px\] {
     height: 478px;
   }
+  .h-\[557px\] {
+    height: 557px;
+  }
   .h-\[600px\] {
     height: 600px;
+  }
+  .h-\[870px\] {
+    height: 870px;
+  }
+  .h-\[899px\] {
+    height: 899px;
   }
   .h-\[3000px\] {
     height: 3000px;
@@ -328,6 +383,18 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
+  .w-\[5px\] {
+    width: 5px;
+  }
+  .w-\[7px\] {
+    width: 7px;
+  }
+  .w-\[75px\] {
+    width: 75px;
+  }
+  .w-\[110px\] {
+    width: 110px;
+  }
   .w-\[132px\] {
     width: 132px;
   }
@@ -337,11 +404,29 @@
   .w-\[300px\] {
     width: 300px;
   }
+  .w-\[750px\] {
+    width: 750px;
+  }
   .w-\[780px\] {
     width: 780px;
   }
   .w-\[820px\] {
     width: 820px;
+  }
+  .w-\[840px\] {
+    width: 840px;
+  }
+  .w-\[850px\] {
+    width: 850px;
+  }
+  .w-\[870px\] {
+    width: 870px;
+  }
+  .w-\[970px\] {
+    width: 970px;
+  }
+  .w-\[1035px\] {
+    width: 1035px;
   }
   .w-\[1170px\] {
     width: 1170px;
@@ -349,14 +434,29 @@
   .w-full {
     width: 100%;
   }
+  .max-w-\[6\] {
+    max-width: 6;
+  }
   .max-w-\[100px\] {
     max-width: 100px;
+  }
+  .max-w-\[460px\] {
+    max-width: 460px;
   }
   .max-w-\[480px\] {
     max-width: 480px;
   }
   .max-w-\[600px\] {
     max-width: 600px;
+  }
+  .max-w-\[640px\] {
+    max-width: 640px;
+  }
+  .max-w-\[660px\] {
+    max-width: 660px;
+  }
+  .max-w-\[680px\] {
+    max-width: 680px;
   }
   .max-w-\[1170px\] {
     max-width: 1170px;
@@ -366,6 +466,9 @@
   }
   .flex-1 {
     flex: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
@@ -396,6 +499,9 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -414,15 +520,24 @@
   .gap-24 {
     gap: calc(var(--spacing) * 24);
   }
+  .gap-\[30px\] {
+    gap: 30px;
+  }
   .overflow-hidden {
     overflow: hidden;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
+  .rounded-tr-\[370px\] {
+    border-top-right-radius: 370px;
+  }
   .rounded-b-full {
     border-bottom-right-radius: calc(infinity * 1px);
     border-bottom-left-radius: calc(infinity * 1px);
+  }
+  .rounded-br-\[370px\] {
+    border-bottom-right-radius: 370px;
   }
   .rounded-bl-\[400px\] {
     border-bottom-left-radius: 400px;
@@ -431,9 +546,20 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
+  .border-t {
+    border-top-style: var(--tw-border-style);
+    border-top-width: 1px;
+  }
   .border-b {
     border-bottom-style: var(--tw-border-style);
     border-bottom-width: 1px;
+  }
+  .border-l {
+    border-left-style: var(--tw-border-style);
+    border-left-width: 1px;
+  }
+  .border-primary {
+    border-color: var(--color-primary);
   }
   .border-primary\/30 {
     border-color: color-mix(in srgb, #030605 30%, transparent);
@@ -459,11 +585,17 @@
   .bg-page {
     background-color: var(--color-page);
   }
+  .bg-pink-300 {
+    background-color: var(--color-pink-300);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
   .p-12 {
     padding: calc(var(--spacing) * 12);
+  }
+  .p-\[60px_48px\] {
+    padding: 60px 48px;
   }
   .\!px-6 {
     padding-inline: calc(var(--spacing) * 6) !important;
@@ -471,20 +603,68 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
+  }
+  .px-6 {
+    padding-inline: calc(var(--spacing) * 6);
+  }
+  .px-16 {
+    padding-inline: calc(var(--spacing) * 16);
+  }
+  .px-\[20px_22px\] {
+    padding-inline: 20px 22px;
+  }
+  .px-\[20px_24px\] {
+    padding-inline: 20px 24px;
+  }
+  .px-\[20px_\] {
+    padding-inline: 20px ;
+  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
+  }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
   }
   .py-24 {
     padding-block: calc(var(--spacing) * 24);
   }
+  .py-\[100px_50px\] {
+    padding-block: 100px 50px;
+  }
+  .pt-2 {
+    padding-top: calc(var(--spacing) * 2);
+  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
+  }
+  .pt-24 {
+    padding-top: calc(var(--spacing) * 24);
+  }
+  .pt-\[30px\] {
+    padding-top: 30px;
+  }
+  .pt-\[100px\] {
+    padding-top: 100px;
+  }
+  .pb-12 {
+    padding-bottom: calc(var(--spacing) * 12);
   }
   .pl-6 {
     padding-left: calc(var(--spacing) * 6);
   }
+  .pl-20 {
+    padding-left: calc(var(--spacing) * 20);
+  }
+  .pl-\[30px\] {
+    padding-left: 30px;
+  }
   .text-center {
     text-align: center;
+  }
+  .text-justify {
+    text-align: justify;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -498,6 +678,10 @@
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
   }
+  .text-lg {
+    font-size: var(--text-lg);
+    line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
   .text-xl {
     font-size: var(--text-xl);
     line-height: var(--tw-leading, var(--text-xl--line-height));
@@ -510,21 +694,46 @@
     --tw-leading: 1;
     line-height: 1;
   }
+  .leading-relaxed {
+    --tw-leading: var(--leading-relaxed);
+    line-height: var(--leading-relaxed);
+  }
   .font-extrabold {
     --tw-font-weight: var(--font-weight-extrabold);
     font-weight: var(--font-weight-extrabold);
   }
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
   .text-white {
     color: var(--color-white);
+  }
+  .italic {
+    font-style: italic;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .shadow-2xl {
     --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .drop-shadow-xl {
     --tw-drop-shadow-size: drop-shadow(0 9px 7px var(--tw-drop-shadow-color, rgb(0 0 0 / 0.1)));
     --tw-drop-shadow: drop-shadow(var(--drop-shadow-xl));
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .drop-shadow-primary {
+    --tw-drop-shadow-color: #030605;
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-drop-shadow-color: color-mix(in oklab, var(--color-primary) var(--tw-drop-shadow-alpha), transparent);
+    }
+    --tw-drop-shadow: var(--tw-drop-shadow-size);
   }
   .drop-shadow-primary\/30 {
     --tw-drop-shadow-color: color-mix(in srgb, #030605 30%, transparent);
@@ -532,6 +741,9 @@
       --tw-drop-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-primary) 30%, transparent) var(--tw-drop-shadow-alpha), transparent);
     }
     --tw-drop-shadow: var(--tw-drop-shadow-size);
+  }
+  .filter {
+    filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
@@ -611,6 +823,11 @@
       margin-inline: calc(var(--spacing) * 0);
     }
   }
+  .xl\:mb-\[90px\] {
+    @media (width >= 1170px) {
+      margin-bottom: 90px;
+    }
+  }
   .xl\:block {
     @media (width >= 1170px) {
       display: block;
@@ -636,6 +853,11 @@
       height: 800px;
     }
   }
+  .xl\:h-\[1380px\] {
+    @media (width >= 1170px) {
+      height: 1380px;
+    }
+  }
   .xl\:min-h-auto {
     @media (width >= 1170px) {
       min-height: auto;
@@ -654,6 +876,11 @@
   .xl\:max-w-\[720px\] {
     @media (width >= 1170px) {
       max-width: 720px;
+    }
+  }
+  .xl\:max-w-max {
+    @media (width >= 1170px) {
+      max-width: max-content;
     }
   }
   .xl\:flex-row {
@@ -699,14 +926,29 @@
       padding-inline: calc(var(--spacing) * 0);
     }
   }
+  .xl\:px-5 {
+    @media (width >= 1170px) {
+      padding-inline: calc(var(--spacing) * 5);
+    }
+  }
   .xl\:py-0 {
     @media (width >= 1170px) {
       padding-block: calc(var(--spacing) * 0);
     }
   }
+  .xl\:py-\[80px\] {
+    @media (width >= 1170px) {
+      padding-block: 80px;
+    }
+  }
   .xl\:text-left {
     @media (width >= 1170px) {
       text-align: left;
+    }
+  }
+  .xl\:text-right {
+    @media (width >= 1170px) {
+      text-align: right;
     }
   }
   .xl\:text-7xl {
@@ -980,6 +1222,11 @@ a {
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -1074,6 +1321,7 @@ a {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
